--- a/Jour4/Job06/docker-compose.yml
+++ b/Jour4/Job06/docker-compose.yml
@@ -1,29 +1,33 @@
 version: '3.8'
 
 services:
+  # Service MySQL
   database:
     image: mysql:latest
     container_name: mysql_container
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: reseautage
+      MYSQL_DATABASE: projetdb
     ports:
       - "3306:3306"
     networks:
       - app_network
     volumes:
-      - mysql_data:/var/lib/mysql
+      - db_data:/var/lib/mysql
 
+  # Service Backend Node.js
   backend:
-    build: ./backend
+    build: 
+      context: ./backend
+      dockerfile: Dockerfile
     container_name: backend_container
     restart: always
     environment:
       DB_HOST: database
       DB_USER: root
       DB_PASSWORD: root
-      DB_NAME: reseautage
+      DB_NAME: projetdb
     ports:
       - "3000:3000"
     depends_on:
@@ -33,6 +37,7 @@ services:
     volumes:
       - ./backend:/usr/src/app
 
+  # Service Frontend Nginx
   nginx:
     image: nginx:alpine
     container_name: nginx_container
@@ -43,10 +48,11 @@ services:
       - backend
     volumes:
       - ./frontend:/usr/share/nginx/html
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - app_network
 
+  # Service Adminer
   adminer:
     image: adminer
     container_name: adminer_container
@@ -63,4 +69,4 @@ networks:
     driver: bridge
 
 volumes:
-  mysql_data:
+  db_data:
